[package]
name = "timesheet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
git2 = "0.13.23"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
exitcode = "1.1.2"
mongodb = { version = "2.0.0" }
tokio = { version = "1.12.0", features = ["full"] }
random-string = "1.0"
futures = "0.3"
bson = { version = "2.0.0", features = ["chrono-0_4"] }